--- a/assessments.html
+++ b/assessments.html
@@ -249,6 +249,9 @@ async function loadSLEsForSelectedStrands() {
       checkbox.value = sle.id;
       checkbox.className = "sleCheckbox";
 
+      // ✅ Add strand_id as a data attribute
+      checkbox.dataset.strandId = strandId;
+
       label.appendChild(checkbox);
       label.appendChild(
         document.createTextNode(
@@ -454,7 +457,7 @@ for (let sId of selectedStrands) {
   // Only SLEs that belong to this strand
   const sleIdsForStrand = selectedSLEs.filter(sleId => {
     const sleEl = document.querySelector(`.sleCheckbox[value="${sleId}"]`);
-    return sleEl && sleEl.parentElement.textContent.includes(strands.find(st => st.id == sId).name);
+    return sleEl && sleEl.dataset.strandId === sId;
   });
 
   if (sleIdsForStrand.length > 0) {
@@ -477,7 +480,6 @@ for (let sId of selectedStrands) {
 if (strandRows.length > 0) {
   await supabase.from("assessment_strands").insert(strandRows);
 }
-  
   // ✅ Save / Update results (levels only)
   const rows = Array.from(studentRows).map(tr => ({
     assessment_id: assessmentId,
@@ -579,15 +581,7 @@ if (strandData && strandData.length > 0) {
     cb.checked = savedStrandIds.includes(cb.value);
   });
 
- await loadSLEsForSelectedStrands();
 
-// Small delay to ensure dynamic checkboxes exist
-setTimeout(() => {
-  document.querySelectorAll(".sleCheckbox").forEach(cb => {
-    cb.checked = savedSLEIds.includes(cb.value);
-  });
-}, 50);
-}
   // 6️⃣ Load student results
   const { data: results } = await supabase
     .from("assessment_results")
@@ -604,6 +598,16 @@ setTimeout(() => {
   });
 
 
+await loadSLEsForSelectedStrands();
+
+// Small delay to ensure dynamic checkboxes exist
+setTimeout(() => {
+  document.querySelectorAll(".sleCheckbox").forEach(cb => {
+    cb.checked = savedSLEIds.includes(cb.value);
+  });
+}, 100);
+
+  
 const EDIT_WINDOW_DAYS = 14;
 
 if (diffDays <= EDIT_WINDOW_DAYS) {
